# global-arbitrage

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: research.md
scripts/: backtest.py  paper.py  scan.py
src/global_arbitrage/: __init__.py
src/global_arbitrage/backtest/: __init__.py  engine.py
src/global_arbitrage/cli/: backtest.py  paper.py  scan.py
src/global_arbitrage/config/: settings.py
src/global_arbitrage/connectors/: __init__.py  base.py  binance.py  bitso.py  fx.py  html.py  ib.py  mt5.py  yahoo.py
src/global_arbitrage/core/: __init__.py  alerts.py  costs.py  models.py  scanner.py  store.py  utils.py
src/global_arbitrage/execution/: __init__.py  broker.py  ib.py  mt5.py  paper.py  router.py
src/global_arbitrage/reporting/: __init__.py  summary.py
src/global_arbitrage/strategies/: __init__.py  adr_parity.py  base.py  bridge.py  crypto_implied_fx.py  ewz_leadlag.py
tests/: test_adr_strategy.py  test_binance_connector.py  test_broker_router.py  test_costs.py  test_crypto_strategy.py  test_ewz_strategy.py  test_fx_normalization.py  test_ib_connector.py  test_mt5_connector.py  test_paper_math.py  test_scanner.py  test_yahoo_connector.py
